--- a/index.html
+++ b/index.html
@@ -1,126 +1,170 @@
-﻿<!DOCTYPE html>
-<html lang="uk">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Clappr Player</title>
-  <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/clappr-level-selector@latest/dist/level-selector.min.js"></script>
+  <title>player</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/videojs-max-quality-selector@0.9.1/dist/videojs-max-quality-selector.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://vsalema.github.io/tvpt4/css/tresmin.css">
+  <link href="https://cdn.jsdelivr.net/npm/videojs-logo@2.1.1/dist/videojs-logo.css" rel="stylesheet">
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      overflow: hidden;
-      height: 100%;
-    }
-    #player {
-      width: 100%;
-      height: 100vh;
+    @import url("https://vsalema.github.io/tvpt4/css/tooltip.css");
+    .video-container {
       position: relative;
+      max-width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 5px;
+      overflow: hidden;
     }
-    .custom-logo {
+    .video-wrapper {
+      position: relative;
+      width: 100%;
+      height: 0;
+      padding-bottom: 56.25%;
+    }
+    video {
       position: absolute;
-      top: 1%;
-      right: 1%;
-      z-index: 9999;
-      pointer-events: none;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
-    .custom-logo img {
-      width: 90px;
-      transition: width 0.3s;
-    }
-    .floating-label {
+    .vjs-subtitles-button { display: none; }
+    .vjs-dash-label {
       position: absolute;
       top: 5%;
-      left: 50%;
+      left: 58%;
       transform: translateX(-50%);
+      z-index: 9999;
       color: white;
       font-size: 18px;
-      z-index: 9999;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
+      font-weight: normal;
       pointer-events: none;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
     }
-    @media (min-width: 769px) {
-      .custom-logo img {
-        width: 180px;
-      }
-      .floating-label {
-        font-size: 23px;
-      }
-    }
-    .poster-overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-size: cover;
-      background-position: center;
-      z-index: 1000;
-      transition: opacity 2s ease;
+    .vjs-logo-content {
+      position: absolute !important;
+      left: auto !important;
+      bottom: auto !important;
+      z-index: 9999;
+      pointer-events: none;
     }
   </style>
 </head>
-<body>
+<body translate="no">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.20.1/video.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-http-streaming@3.3.0/dist/videojs-http-streaming.min.js"></script>
+  <script src="https://unpkg.com/videojs-contrib-dash/dist/videojs-dash.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-logo@2.1.1/dist/videojs-logo.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-quality-levels@2.1.0/dist/videojs-contrib-quality-levels.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-hls-quality-selector@1.1.1/dist/videojs-hls-quality-selector.min.js"></script>
 
-<div id="player">
-  <div class="poster-overlay" id="poster"></div>
-  <div class="custom-logo"><img src="https://imgpx.com/Kw7YeyDCnc4Y.jpg" alt="Logo"></div>
-  <div class="floating-label">На каву: 4149 4993 9218 4006</div>
-</div>
+  <div class="video-container">
+    <div class="video-wrapper">
+      <video id="js-video-horsa" class="video-js vjs-16-9 vjs-big-play-centered" controls playsinline poster="https://dynamo.kiev.ua/media/posts/2023/03/25/7_2.jpg"></video>
+    </div>
+  </div>
 
-<script>
-  const posterUrl = 'https://dynamo.kiev.ua/media/posts/2023/03/25/7_2.jpg';
-  document.getElementById('poster').style.backgroundImage = `url('${posterUrl}')`;
+  <script>
+    const player = videojs('js-video-horsa');
 
-  const player = new Clappr.Player({
-    parentId: "#player",
-    source: "https://vcdn.produck.company/out/ngrp:divisport_all/index.m3u8",
-    width: "100%",
-    height: "100%",
-    plugins: [Clappr.LevelSelector],
-    poster: posterUrl,
-    mute: false,
-    autoPlay: false,
-    mediacontrol: { seekbar: "#00adef", buttons: "#00adef" },
-    playback: {
-      playInline: true,
-      hlsjsConfig: {
-        maxBufferSize: 0,
-        maxBufferLength: 10,
+    player.logo({
+      image: 'https://imgpx.com/Kw7YeyDCnc4Y.jpg',
+      url: 'https://t.me/SportKasTV',
+      width: 90,
+      fadeDelay: null
+    });
+
+    const label = document.createElement('div');
+    label.className = 'vjs-dash-label';
+    label.textContent = 'На каву: 4149 4993 9218 4006';
+    player.el().appendChild(label);
+
+    const stream_one = "https://vcdn.produck.company/out/ngrp:divisport_all/index.m3u8";
+    player.src({ src: stream_one, type: 'application/x-mpegURL' });
+
+    player.ready(function () {
+      player.hlsQualitySelector({ displayCurrentQuality: true });
+
+      const videoElement = player.el();
+      videoElement.addEventListener('dblclick', toggleFullscreen);
+
+      let lastTap = 0;
+      videoElement.addEventListener('touchstart', function (e) {
+        const currentTime = new Date().getTime();
+        const tapLength = currentTime - lastTap;
+        if (tapLength < 300 && tapLength > 0) {
+          toggleFullscreen();
+          e.preventDefault();
+        }
+        lastTap = currentTime;
+      });
+
+      function toggleFullscreen() {
+        const fullscreenElement = document.fullscreenElement || document.webkitFullscreenElement || document.mozFullScreenElement || document.msFullscreenElement;
+        if (!fullscreenElement) {
+          if (videoElement.requestFullscreen) videoElement.requestFullscreen();
+          else if (videoElement.webkitRequestFullscreen) videoElement.webkitRequestFullscreen();
+          else if (videoElement.mozRequestFullScreen) videoElement.mozRequestFullScreen();
+          else if (videoElement.msRequestFullscreen) videoElement.msRequestFullscreen();
+        } else {
+          if (document.exitFullscreen) document.exitFullscreen();
+          else if (document.webkitExitFullscreen) document.webkitExitFullscreen();
+          else if (document.mozCancelFullScreen) document.mozCancelFullScreen();
+          else if (document.msExitFullscreen) document.msExitFullscreen();
+        }
       }
-    }
-  });
 
-  // Зникнення постеру при старті
-  player.on(Clappr.Events.PLAYER_PLAY, () => {
-    const poster = document.getElementById('poster');
-    poster.style.opacity = '0';
-    setTimeout(() => poster.style.display = 'none', 2000);
-  });
+      document.addEventListener('fullscreenchange', () => {
+        tryLockOrientation();
+        updateLabelFontSize();
+      });
 
-  // Вхід у fullscreen одразу
-  player.on(Clappr.Events.PLAYER_READY, () => {
-    setTimeout(() => {
-      const el = document.fullscreenElement || document.webkitFullscreenElement;
-      const container = document.getElementById('player');
-      if (!el) {
-        if (container.requestFullscreen) container.requestFullscreen();
-        else if (container.webkitRequestFullscreen) container.webkitRequestFullscreen();
-        else if (container.mozRequestFullScreen) container.mozRequestFullScreen();
-        else if (container.msRequestFullscreen) container.msRequestFullscreen();
+      function tryLockOrientation() {
+        if (screen.orientation && screen.orientation.lock) {
+          screen.orientation.lock('landscape').catch(console.warn);
+        }
       }
-    }, 1000);
-  });
 
-  // Блокування орієнтації на телефонах
-  function lockOrientation() {
-    if (screen.orientation && screen.orientation.lock) {
-      screen.orientation.lock('landscape').catch(console.warn);
-    }
-  }
+      function updateLabelFontSize() {
+        const isFullscreen = document.fullscreenElement || document.webkitFullscreenElement;
+        label.style.fontSize = isFullscreen && window.innerWidth > 768 ? '23px' : '18px';
+      }
 
-  document.addEventListener('fullscreenchange', lockOrientation);
-  document.addEventListener('webkitfullscreenchange', lockOrientation);
-</script>
-
+      const logoImgInterval = setInterval(() => {
+        const logoImg = document.querySelector('.vjs-logo-content img');
+        const logoBox = document.querySelector('.vjs-logo-content');
+        if (logoImg && logoBox) {
+          const baseLogoWidth = 90;
+          function updateLogoSize() {
+            const isFullscreen = document.fullscreenElement || document.webkitFullscreenElement;
+            const isDesktop = window.innerWidth > 768;
+            if (isFullscreen) {
+              if (isDesktop) {
+                logoImg.style.width = (baseLogoWidth * 2.3) + 'px';
+                logoBox.style.top = '7%';
+                logoBox.style.right = '1%';
+              } else {
+                logoImg.style.width = baseLogoWidth + 'px';
+                logoBox.style.top = '2%';
+                logoBox.style.right = '9%';
+              }
+            } else {
+              logoImg.style.width = baseLogoWidth + 'px';
+              logoBox.style.top = '1%';
+              logoBox.style.right = '1%';
+            }
+          }
+          document.addEventListener('fullscreenchange', updateLogoSize);
+          document.addEventListener('webkitfullscreenchange', updateLogoSize);
+          updateLogoSize();
+          updateLabelFontSize();
+          clearInterval(logoImgInterval);
+        }
+      }, 500);
+    });
+  </script>
 </body>
 </html>
