--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
   <link href="https://cdn.jsdelivr.net/npm/videojs-logo@2.1.1/dist/videojs-logo.css" rel="stylesheet">
   <style>
     @import url("https://vsalema.github.io/tvpt4/css/tooltip.css");
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: black;
+    }
     .video-container {
       position: relative;
-      max-width: 100%;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 5px;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
     }
     .video-wrapper {
       position: relative;
       width: 100%;
-      height: 0;
-      padding-bottom: 56.25%;
+      height: 100%;
     }
     video {
       position: absolute;
@@ -61,7 +64,7 @@
   <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-quality-levels@2.1.0/dist/videojs-contrib-quality-levels.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/videojs-hls-quality-selector@1.1.1/dist/videojs-hls-quality-selector.min.js"></script>
 
-  <div class="video-container">
+  <div class="video-container" id="videoContainer">
     <div class="video-wrapper">
       <video id="js-video-horsa" class="video-js vjs-16-9 vjs-big-play-centered" controls playsinline poster="https://dynamo.kiev.ua/media/posts/2023/03/25/7_2.jpg"></video>
     </div>
@@ -88,6 +91,17 @@
     player.ready(function () {
       player.hlsQualitySelector({ displayCurrentQuality: true });
 
+      // Спроба автоматично увімкнути fullscreen
+      const container = document.getElementById('videoContainer');
+      function enterFullscreen() {
+        if (container.requestFullscreen) container.requestFullscreen();
+        else if (container.webkitRequestFullscreen) container.webkitRequestFullscreen();
+        else if (container.mozRequestFullScreen) container.mozRequestFullScreen();
+        else if (container.msRequestFullscreen) container.msRequestFullscreen();
+      }
+      // Деякі браузери дозволяють повноекранний режим лише після взаємодії користувача
+      setTimeout(enterFullscreen, 1000);
+
       const videoElement = player.el();
       videoElement.addEventListener('dblclick', toggleFullscreen);
 
@@ -105,10 +119,7 @@
       function toggleFullscreen() {
         const fullscreenElement = document.fullscreenElement || document.webkitFullscreenElement || document.mozFullScreenElement || document.msFullscreenElement;
         if (!fullscreenElement) {
-          if (videoElement.requestFullscreen) videoElement.requestFullscreen();
-          else if (videoElement.webkitRequestFullscreen) videoElement.webkitRequestFullscreen();
-          else if (videoElement.mozRequestFullScreen) videoElement.mozRequestFullScreen();
-          else if (videoElement.msRequestFullscreen) videoElement.msRequestFullscreen();
+          enterFullscreen();
         } else {
           if (document.exitFullscreen) document.exitFullscreen();
           else if (document.webkitExitFullscreen) document.webkitExitFullscreen();
