--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
       height: 100%;
       object-fit: contain;
     }
+    .fullscreen-btn {
+      position: absolute;
+      z-index: 99999;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #00adef;
+      color: white;
+      padding: 12px 24px;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 8px;
+    }
     .vjs-subtitles-button { display: none; }
     .vjs-dash-label {
       position: absolute;
@@ -68,6 +82,7 @@
     <div class="video-wrapper">
       <video id="js-video-horsa" class="video-js vjs-16-9 vjs-big-play-centered" controls playsinline poster="https://dynamo.kiev.ua/media/posts/2023/03/25/7_2.jpg"></video>
     </div>
+    <button class="fullscreen-btn" id="goFullscreenBtn">Перегляд на весь екран</button>
   </div>
 
   <script>
@@ -91,17 +106,6 @@
     player.ready(function () {
       player.hlsQualitySelector({ displayCurrentQuality: true });
 
-      // Спроба автоматично увімкнути fullscreen
-      const container = document.getElementById('videoContainer');
-      function enterFullscreen() {
-        if (container.requestFullscreen) container.requestFullscreen();
-        else if (container.webkitRequestFullscreen) container.webkitRequestFullscreen();
-        else if (container.mozRequestFullScreen) container.mozRequestFullScreen();
-        else if (container.msRequestFullscreen) container.msRequestFullscreen();
-      }
-      // Деякі браузери дозволяють повноекранний режим лише після взаємодії користувача
-      setTimeout(enterFullscreen, 1000);
-
       const videoElement = player.el();
       videoElement.addEventListener('dblclick', toggleFullscreen);
 
@@ -117,9 +121,13 @@
       });
 
       function toggleFullscreen() {
+        const container = document.getElementById('videoContainer');
         const fullscreenElement = document.fullscreenElement || document.webkitFullscreenElement || document.mozFullScreenElement || document.msFullscreenElement;
         if (!fullscreenElement) {
-          enterFullscreen();
+          if (container.requestFullscreen) container.requestFullscreen();
+          else if (container.webkitRequestFullscreen) container.webkitRequestFullscreen();
+          else if (container.mozRequestFullScreen) container.mozRequestFullScreen();
+          else if (container.msRequestFullscreen) container.msRequestFullscreen();
         } else {
           if (document.exitFullscreen) document.exitFullscreen();
           else if (document.webkitExitFullscreen) document.webkitExitFullscreen();
@@ -175,6 +183,12 @@
           clearInterval(logoImgInterval);
         }
       }, 500);
+    });
+
+    // Кнопка на весь екран
+    document.getElementById('goFullscreenBtn').addEventListener('click', function () {
+      toggleFullscreen();
+      this.style.display = 'none';
     });
   </script>
 </body>
