--- a/index.html
+++ b/index.html
@@ -3,29 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>player</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://unpkg.com/videojs-max-quality-selector@0.9.1/dist/videojs-max-quality-selector.css" rel="stylesheet">
   <link rel="stylesheet" href="https://vsalema.github.io/tvpt4/css/tresmin.css">
   <link href="https://cdn.jsdelivr.net/npm/videojs-logo@2.1.1/dist/videojs-logo.css" rel="stylesheet">
   <style>
     @import url("https://vsalema.github.io/tvpt4/css/tooltip.css");
+
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       background: black;
-    }
-    .video-container {
-      position: relative;
-      width: 100%;
-      height: 100%;
       overflow: hidden;
     }
+
+    .video-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100vw;
+      height: 100vh;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: black;
+    }
+
     .video-wrapper {
       position: relative;
       width: 100%;
-      height: 100%;
+      max-width: 100%;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
     }
+
+    @media (orientation: portrait) {
+      .video-wrapper {
+        transform: rotate(90deg);
+        transform-origin: center center;
+        height: 56.25vw;
+        width: 100vh;
+        padding-bottom: 0;
+      }
+    }
+
     video {
       position: absolute;
       top: 0;
@@ -33,22 +57,11 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
+      background: black;
     }
-    .fullscreen-btn {
-      position: absolute;
-      z-index: 99999;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #00adef;
-      color: white;
-      padding: 12px 24px;
-      border: none;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 8px;
-    }
+
     .vjs-subtitles-button { display: none; }
+
     .vjs-dash-label {
       position: absolute;
       top: 5%;
@@ -61,6 +74,7 @@
       pointer-events: none;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
     }
+
     .vjs-logo-content {
       position: absolute !important;
       left: auto !important;
@@ -82,7 +96,6 @@
     <div class="video-wrapper">
       <video id="js-video-horsa" class="video-js vjs-16-9 vjs-big-play-centered" controls playsinline poster="https://dynamo.kiev.ua/media/posts/2023/03/25/7_2.jpg"></video>
     </div>
-    <button class="fullscreen-btn" id="goFullscreenBtn">Перегляд на весь екран</button>
   </div>
 
   <script>
@@ -143,7 +156,7 @@
 
       function tryLockOrientation() {
         if (screen.orientation && screen.orientation.lock) {
-          screen.orientation.lock('landscape').catch(console.warn);
+          screen.orientation.lock('landscape').catch(() => {});
         }
       }
 
@@ -183,12 +196,6 @@
           clearInterval(logoImgInterval);
         }
       }, 500);
-    });
-
-    // Кнопка на весь екран
-    document.getElementById('goFullscreenBtn').addEventListener('click', function () {
-      toggleFullscreen();
-      this.style.display = 'none';
     });
   </script>
 </body>
